[gd_scene load_steps=25 format=3 uid="uid://b4qqv6hxwhfa6"]

[ext_resource type="PackedScene" uid="uid://bs4dfgpmfv0ah" path="res://Enemy/boss_enemy.tscn" id="1_es12q"]
[ext_resource type="Script" uid="uid://b64gu82v42j2g" path="res://Enemy/Region 1/rat_king_boss_enemy.gd" id="2_tikj1"]
[ext_resource type="PackedScene" uid="uid://bacyei3qia24x" path="res://Enemy/Region 1/rat_enemy.tscn" id="3_5f65s"]
[ext_resource type="Texture2D" uid="uid://bb2knfy6j7jad" path="res://Assets/Enemies/Rat King Boss/idle.png" id="4_i3ly1"]
[ext_resource type="AudioStream" uid="uid://do05he2ka2flt" path="res://Assets/SFX/silence.ogg" id="5_ojqb5"]
[ext_resource type="AudioStream" uid="uid://bpj7k4uj5jq2c" path="res://Assets/SFX/Enemies/Rat/Dying/728086__macohibs__20240319_142259_1-distressed-rat - shortened.ogg" id="6_xoqt7"]
[ext_resource type="AudioStream" uid="uid://bp3sv5ttelwe7" path="res://Assets/SFX/Enemies/Rat/Hurt/hurt-01.ogg" id="6_ykcx6"]
[ext_resource type="AudioStream" uid="uid://dgt0m2lkbjkgm" path="res://Assets/SFX/Enemies/Rat/Hurt/hurt-02.ogg" id="7_lx7j3"]
[ext_resource type="AudioStream" uid="uid://ctf7hig2nx25t" path="res://Assets/SFX/Enemies/Rat/Hurt/hurt-03.ogg" id="8_7aukm"]
[ext_resource type="AudioStream" uid="uid://buar21d0luwut" path="res://Assets/SFX/Enemies/Rat/Hurt/hurt-04.ogg" id="9_d3kwu"]
[ext_resource type="AudioStream" uid="uid://bw4vmn858k6x2" path="res://Assets/SFX/Enemies/Rat/Hurt/hurt-05.ogg" id="10_p4qgw"]
[ext_resource type="AudioStream" uid="uid://bpn2msphhi4v2" path="res://Assets/SFX/Enemies/Rat/Hurt/hurt-06.ogg" id="11_ml18s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tikj1"]
resource_local_to_scene = true
size = Vector2(125, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ij1g"]
resource_local_to_scene = true
size = Vector2(128, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ojqb5"]
resource_local_to_scene = true
size = Vector2(128, 128)

[sub_resource type="Animation" id="Animation_5f65s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.440063, -128)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SFX/DyingSFX:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_i3ly1"]
resource_name = "attack"
length = 1.5
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.666667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 1.05), Vector2(1, 1.18), Vector2(1.1, 0.95)]
}

[sub_resource type="Animation" id="Animation_5ij1g"]
resource_name = "cooldown"
step = 0.1

[sub_resource type="Animation" id="Animation_ojqb5"]
resource_name = "dying"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.333333, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5708]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"disable_all_detection"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-0.440063, -128), Vector2(-0.44, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("SFX/DyingSFX:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_xoqt7"]
resource_name = "idle"
loop_mode = 1

[sub_resource type="Animation" id="Animation_phjf2"]
resource_name = "windup"
step = 0.1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i3ly1"]
_data = {
&"RESET": SubResource("Animation_5f65s"),
&"attack": SubResource("Animation_i3ly1"),
&"cooldown": SubResource("Animation_5ij1g"),
&"die": SubResource("Animation_ojqb5"),
&"idle": SubResource("Animation_xoqt7"),
&"windup": SubResource("Animation_phjf2")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_yyvpr"]
random_pitch = 1.1
streams_count = 6
stream_0/stream = ExtResource("6_ykcx6")
stream_1/stream = ExtResource("7_lx7j3")
stream_2/stream = ExtResource("8_7aukm")
stream_3/stream = ExtResource("9_d3kwu")
stream_4/stream = ExtResource("10_p4qgw")
stream_5/stream = ExtResource("11_ml18s")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_phjf2"]
streams_count = 1
stream_0/stream = ExtResource("6_xoqt7")

[node name="RatKingBossEnemy" instance=ExtResource("1_es12q")]
script = ExtResource("2_tikj1")
rat_enemy_scene = ExtResource("3_5f65s")
sight_range = 2000.0
speed = 200.0

[node name="Attack" parent="." index="0"]
visible = false
position = Vector2(81, -1.41625e-05)

[node name="CollisionShape2D" parent="Attack/HitBox/Area2D" index="0"]
shape = SubResource("RectangleShape2D_tikj1")

[node name="Shadow" parent="." index="1"]
position = Vector2(-1.44006, -8.99999)
scale = Vector2(4.915, 1.35)

[node name="Sprite2D" parent="." index="2"]
modulate = Color(1, 1, 1, 1)
position = Vector2(-0.440063, -128)
texture = ExtResource("4_i3ly1")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." index="3"]
visible = false
position = Vector2(0, -128.421)
polygon = PackedVector2Array(28.8, -79, 21.2, -87.7, 16, -85.8, 16, -84, -26.4, -72, -32.1, -72, -39.1, -62, -43.4, -62, -52, -46, -55.9, -44, -59.7, -44, -85.7, -16, -89.4, -16, -91.9, -1.3, -97.5, 0, -101.5, 0, -104, 17.1, -116.4, 28, -119.7, 28, -121, 46.6, -128, 56, -128, 128, 124.8, 128, 128, 104.3, 128, 93.9, 122.7, 92.5, 122, 84, 122, 82.1, 127, 74.1, 127, 65.5, 122.6, 63.4, 117, 52, 122, 45.4, 122, 41, 112.2, 22.5, 117, 16, 121.1, 16, 118, 3.39999, 118, -3.5, 111.1, -4.4, 108.1, 6.3, 106, 5.39999, 108, -0.400002, 108, -4.9, 96.2, -14.3, 92, -29.8, 92, -35.5, 83.1, -36.8, 79, -51.8, 79, -55.3, 73.2, -56.4, 74, -56.9, 74, -64, 58.9, -64, 53, -71.4, 53, -74.2, 30.4, -79)

[node name="CollisionShape2D" parent="." index="4"]
visible = false
disabled = true

[node name="HitBox" parent="." index="5"]
visible = false
position = Vector2(0, -128.421)

[node name="CollisionShape2D" parent="HitBox/Area2D" index="0"]
visible = false
shape = SubResource("RectangleShape2D_5ij1g")
disabled = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitBox/Area2D" index="1"]
polygon = PackedVector2Array(28.8, -79, 21.2, -87.7, 16, -85.8, 16, -84, -26.4, -72, -32.1, -72, -39.1, -62, -43.4, -62, -52, -46, -55.9, -44, -59.7, -44, -85.7, -16, -89.4, -16, -91.9, -1.3, -97.5, 0, -101.5, 0, -104, 17.1, -116.4, 28, -119.7, 28, -121, 46.6, -128, 56, -128, 128, 124.8, 128, 128, 104.3, 128, 93.9, 122.7, 92.5, 122, 84, 122, 82.1, 127, 74.1, 127, 65.5, 122.6, 63.4, 117, 52, 122, 45.4, 122, 41, 112.2, 22.5, 117, 16, 121.1, 16, 118, 3.39999, 118, -3.5, 111.1, -4.4, 108.1, 6.3, 106, 5.39999, 108, -0.400002, 108, -4.9, 96.2, -14.3, 92, -29.8, 92, -35.5, 83.1, -36.8, 79, -51.8, 79, -55.3, 73.2, -56.4, 74, -56.9, 74, -64, 58.9, -64, 53, -71.4, 53, -74.2, 30.4, -79)

[node name="HurtBox" parent="." index="8"]
position = Vector2(0, -128.421)

[node name="CollisionShape2D" parent="HurtBox/Area2D" index="0"]
shape = SubResource("RectangleShape2D_ojqb5")
disabled = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HurtBox/Area2D" index="1"]
polygon = PackedVector2Array(28.8, -79, 21.2, -87.7, 16, -85.8, 16, -84, -26.4, -72, -32.1, -72, -39.1, -62, -43.4, -62, -52, -46, -55.9, -44, -59.7, -44, -85.7, -16, -89.4, -16, -91.9, -1.3, -97.5, 0, -101.5, 0, -104, 17.1, -116.4, 28, -119.7, 28, -121, 46.6, -128, 56, -128, 128, 124.8, 128, 128, 104.3, 128, 93.9, 122.7, 92.5, 122, 84, 122, 82.1, 127, 74.1, 127, 65.5, 122.6, 63.4, 117, 52, 122, 45.4, 122, 41, 112.2, 22.5, 117, 16, 121.1, 16, 118, 3.39999, 118, -3.5, 111.1, -4.4, 108.1, 6.3, 106, 5.39999, 108, -0.400002, 108, -4.9, 96.2, -14.3, 92, -29.8, 92, -35.5, 83.1, -36.8, 79, -51.8, 79, -55.3, 73.2, -56.4, 74, -56.9, 74, -64, 58.9, -64, 53, -71.4, 53, -74.2, 30.4, -79)

[node name="AnimationPlayer" parent="." index="9"]
libraries = {
&"": SubResource("AnimationLibrary_i3ly1")
}

[node name="EnemyIdleState" parent="StateMachine" index="0" node_paths=PackedStringArray("enemy_approaching_state")]
enemy_approaching_state = NodePath("../EnemyAttackingState")

[node name="EnemyAttackingState" parent="StateMachine" index="3" node_paths=PackedStringArray("enemy_idle_state")]
enemy_idle_state = NodePath(".")

[node name="RatSpawnTimer" type="Timer" parent="." index="11"]
wait_time = 999.0
one_shot = true

[node name="PeriodicSFX" parent="SFX" index="0"]
stream = ExtResource("5_ojqb5")

[node name="FootstepsSFX" parent="SFX" index="1"]
stream = ExtResource("5_ojqb5")

[node name="AttackSFX" parent="SFX" index="2"]
stream = ExtResource("5_ojqb5")

[node name="HurtSFX" parent="SFX" index="3"]
stream = SubResource("AudioStreamRandomizer_yyvpr")
pitch_scale = 0.8
max_polyphony = 9

[node name="DyingSFX" parent="SFX" index="4"]
stream = SubResource("AudioStreamRandomizer_phjf2")
pitch_scale = 0.85

[connection signal="died" from="." to="." method="_on_died"]
[connection signal="timeout" from="RatSpawnTimer" to="." method="_on_rat_spawn_timer_timeout"]

[editable path="Attack/HitBox"]
[editable path="HitBox"]
[editable path="HurtBox"]
